WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75163
DFG loads from signed 8-bit and 16-bit typed arrays are broken
https://bugs.webkit.org/show_bug.cgi?id=75163
Summary
DFG loads from signed 8-bit and 16-bit typed arrays are broken
Filip Pizlo
Reported
2011-12-22 22:38:41 PST
They zero extend instead of sign extending.
Attachments
the patch
(539.57 KB, patch)
2011-12-22 22:48 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-12-22 22:47:51 PST
<
rdar://problem/10622950
>
Filip Pizlo
Comment 2
2011-12-22 22:48:11 PST
Created
attachment 120437
[details]
the patch
WebKit Review Bot
Comment 3
2011-12-22 22:50:57 PST
Attachment 120437
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/JavaScriptCore/assembler/X86Assembler.h:1229: movswl_mr is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/JavaScriptCore/assembler/X86Assembler.h:1234: movswl_mr is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/JavaScriptCore/assembler/X86Assembler.h:1249: movsbl_mr is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/JavaScriptCore/assembler/X86Assembler.h:1254: movsbl_mr is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 4 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 4
2011-12-23 06:31:41 PST
Comment on
attachment 120437
[details]
the patch r=me Please file a follow-up bug for ARM, so we don't forget.
WebKit Review Bot
Comment 5
2011-12-23 13:08:32 PST
Comment on
attachment 120437
[details]
the patch Clearing flags on attachment: 120437 Committed
r103637
: <
http://trac.webkit.org/changeset/103637
>
WebKit Review Bot
Comment 6
2011-12-23 13:08:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug